--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-tree-graph": "^3.2.0",
     "react-vis": "^1.11.3"
   },
   "scripts": {
