--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-tree-graph": "^3.2.0",
-    "react-vis": "^1.11.3"
+    "react-vis": "^1.11.3",
+    "recharts": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
